--- a/SpecFlowSearchEngine_report/Reports/index.html
+++ b/SpecFlowSearchEngine_report/Reports/index.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">19/03/2021 10:26:25</span>
+                    <span class="badge badge-primary">19/03/2021 14:52:02</span>
                 </a>
             </li>
         </ul>
@@ -106,7 +106,7 @@
 						<i class="fa fa-exclamation-circle"></i>
 					</a>
 					<ul id="status-toggle" class="dropdown-menu dropdown-md p-v-0">
-<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>						<a status="fail" class="dropdown-item" href="#"><span>Fail</span><span class="status danger pull-right"></span></a>																														<div class="dropdown-divider"></div>
+<a status="pass" class="dropdown-item" href="#"><span>Pass</span><span class="status success pull-right"></span></a>																																				<div class="dropdown-divider"></div>
 						<a status="clear" class="dropdown-item" href="#"><span>Clear</span><span class="pull-right"><i class="fa fa-close"></i></span></a>
 					</ul>
 				</li>
@@ -114,68 +114,30 @@
         </div>
         <div class="test-list-wrapper scrollable">
             <ul class="test-list-item">
-					<li class="test-item" status="fail" author="" device="" tag="" test-id="1"> 
-						<div class="status-avatar fail-bg">
-							<i class="fa fa-times text-white"></i>
+					<li class="test-item" status="pass" author="" device="" tag="" test-id="1"> 
+						<div class="status-avatar pass-bg">
+							<i class="fa fa-check text-white"></i>
 						</div>
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">Busca termos</p> 
-								<p class="duration text-sm">0h:0m:34s+057ms</p> 
-								<span class="datetime">10:26:25 </span>
+								<p class="duration text-sm">0h:0m:11s+416ms</p> 
+								<span class="datetime">14:52:02 </span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
 							<div class="detail-head">
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
-										<h5 class="test-status text-fail">Busca termos</h5>
-										<span class='badge badge-success'>19/03/2021 10:26:25</span>
-										<span class='badge badge-danger'>19/03/2021 10:26:59</span>
-										<span class='badge badge-default'>0h:0m:34s+057ms</span>
+										<h5 class="test-status text-pass">Busca termos</h5>
+										<span class='badge badge-success'>19/03/2021 14:52:02</span>
+										<span class='badge badge-danger'>19/03/2021 14:52:14</span>
+										<span class='badge badge-default'>0h:0m:11s+416ms</span>
 									</div>
 																	</div>
 							</div>
 
 <div class="accordion mt-4">
-	<div class="card">
-		<div class="card-header" role="tab">
-			<div class="card-title pl-3">
-				<div class="node">Scenario: Acessar uma instância de uma página do google e pesquisar termos</div>
-				<div class="status-avatar float-left pass-bg">
-					<i class="fa fa-check text-white"></i>
-				</div>
-			</div>
-		</div>
-				<div class="collapse">
-                    <div class="card-body">
-                                                    <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given Estou na página principal do Google</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given Digito o termo de pesquisa: BDD</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given Resultados da busca para BDD deve aparecer e acessar o primeiro resultado</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start then" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Then Compare o BDD (Desenvolvimento orientado por comportamento) e feche</span>
-                            </div>
-                    </div>
-				</div>
-	</div>
 	<div class="card">
 		<div class="card-header" role="tab">
 			<div class="card-title pl-3">
@@ -214,46 +176,6 @@
                     </div>
 				</div>
 	</div>
-	<div class="card">
-		<div class="card-header" role="tab">
-			<div class="card-title pl-3">
-				<div class="node">Scenario: Acessar uma instância de uma página do google e pesquisar termos</div>
-				<div class="status-avatar float-left fail-bg">
-					<i class="fa fa-times text-white"></i>
-				</div>
-			</div>
-		</div>
-				<div class="collapse">
-                    <div class="card-body">
-                                                    <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given Estou na página principal do Google</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given Digito o termo de pesquisa: PrimeUp</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given Resultados da busca para PrimeUp deve aparecer e acessar o primeiro resultado</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start then" title="">
-                                <span class="alert-icon fail-bg">
-                                    <i class="fa fa-times text-white"></i>
-                                </span>
-                                <span>Then Compare o PrimeUp e feche</span>
-                            </div>
-			<div class="details">Expected: True
-  But was:  False</div>
-                    </div>
-				</div>
-	</div>
 </div>
 						</div>
 					</li>
@@ -288,11 +210,11 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='0%'>
-	                    <b>0</b> features passed
+	                <div><small data-tooltip='100%'>
+	                    <b>1</b> features passed
                     </small></div>
 	                <div>
-	                    <small data-tooltip='100%'><b>1</b> features failed, 
+	                    <small data-tooltip='0%'><b>0</b> features failed, 
 	                    <b data-tooltip='0%'>0</b> others
 	                    </small>
                     </div>
@@ -310,9 +232,9 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='66,66666666666666%'><b>2</b> scenarios passed</small></div>
+	                <div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
 	                <div>
-	                    <small data-tooltip='33,33333333333333%'><b>1</b> scenarios failed, 
+	                    <small data-tooltip='0%'><b>0</b> scenarios failed, 
 	                    <b data-tooltip='0%'>0</b> others
 	                    </small>
                     </div>
@@ -330,9 +252,9 @@
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='91,66666666666666%'><b>11</b> steps passed</small></div>
+	                <div><small data-tooltip='100%'><b>4</b> steps passed</small></div>
 	                <div>
-	                    <small data-tooltip='8,333333333333332%'><b>1</b> steps failed, 
+	                    <small data-tooltip='0%'><b>0</b> steps failed, 
 	                    <b data-tooltip='0%'>0</b> others
 	                    </small>
                     </div>
@@ -350,7 +272,7 @@
 							<h2 class="font-size-28 font-weight-light">1</h2>
 							<span class="text-semibold text-success font-size-15">
 							<i class="ti-arrow-up font-size-11"></i> 
-								<span>0%</span>
+								<span>100%</span>
 							</span>
 						</div>
 						<div class="align-self-end">
@@ -366,10 +288,10 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Scenarios</h6>
-							<h2 class="font-size-28 font-weight-light">3</h2>
+							<h2 class="font-size-28 font-weight-light">1</h2>
 							<span class="text-semibold text-success font-size-15">
 							<i class="ti-arrow-up font-size-11"></i> 
-								<span>66,67%</span>
+								<span>100%</span>
 							</span>
 						</div>
 						<div class="align-self-end">
@@ -385,7 +307,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">19/03/2021 10:26:25</h6>
+							<h6 class="font-weight-light">19/03/2021 14:52:02</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -401,7 +323,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:35.0862836</h6>
+							<h6 class="font-weight-light">00:00:12.8328815</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -418,33 +340,33 @@
 <script>
 	var statusGroup = {
     parentCount: 1,
-		passParent: 0,
-		failParent: 1,
+		passParent: 1,
+		failParent: 0,
 		fatalParent: 0,
 		errorParent: 0,
 		warningParent: 0,
 		skipParent: 0,
-		exceptionsParent: 1,
-		childCount: 3,
-		passChild: 2,
-		failChild: 1,
+		exceptionsParent: 0,
+		childCount: 1,
+		passChild: 1,
+		failChild: 0,
 		fatalChild: 0,
 		errorChild: 0,
 		warningChild: 0,
 		skipChild: 0,
 		infoChild: 0,
 		debugChild: 0,
-		exceptionsChild: 1,
-		grandChildCount: 12,
-		passGrandChild: 11,
-		failGrandChild: 1,
+		exceptionsChild: 0,
+		grandChildCount: 4,
+		passGrandChild: 4,
+		failGrandChild: 0,
 		fatalGrandChild: 0,
 		errorGrandChild: 0,
 		warningGrandChild: 0,
 		skipGrandChild: 0,
 		infoGrandChild: 0,
 		debugGrandChild: 0,
-		exceptionsGrandChild: 1,
+		exceptionsGrandChild: 0,
 	};
 </script>
 
