--- a/SpecFlowSearchEngine_report/Reports/index.html
+++ b/SpecFlowSearchEngine_report/Reports/index.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">19/03/2021 14:52:02</span>
+                    <span class="badge badge-primary">19/03/2021 15:06:12</span>
                 </a>
             </li>
         </ul>
@@ -121,8 +121,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">Busca termos</p> 
-								<p class="duration text-sm">0h:0m:11s+416ms</p> 
-								<span class="datetime">14:52:02 </span>
+								<p class="duration text-sm">0h:0m:0s+000ms</p> 
+								<span class="datetime">15:06:12 </span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -130,53 +130,13 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">Busca termos</h5>
-										<span class='badge badge-success'>19/03/2021 14:52:02</span>
-										<span class='badge badge-danger'>19/03/2021 14:52:14</span>
-										<span class='badge badge-default'>0h:0m:11s+416ms</span>
+										<span class='badge badge-success'>19/03/2021 15:06:12</span>
+										<span class='badge badge-danger'>19/03/2021 15:06:12</span>
+										<span class='badge badge-default'>0h:0m:0s+000ms</span>
 									</div>
 																	</div>
 							</div>
 
-<div class="accordion mt-4">
-	<div class="card">
-		<div class="card-header" role="tab">
-			<div class="card-title pl-3">
-				<div class="node">Scenario: Acessar uma instância de uma página do google e pesquisar termos</div>
-				<div class="status-avatar float-left pass-bg">
-					<i class="fa fa-check text-white"></i>
-				</div>
-			</div>
-		</div>
-				<div class="collapse">
-                    <div class="card-body">
-                                                    <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given Estou na página principal do Google</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given Digito o termo de pesquisa: Abacaxi</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start given" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Given Resultados da busca para Abacaxi deve aparecer e acessar o primeiro resultado</span>
-                            </div>
-                            <div class="d-flex align-items-center justify-content-start then" title="">
-                                <span class="alert-icon pass-bg">
-                                    <i class="fa fa-check text-white"></i>
-                                </span>
-                                <span>Then Compare o Abacaxi melhora a digestão e aumenta a imunidade; veja 9 benefícios - 01/12/2018 - UOL VivaBem e feche</span>
-                            </div>
-                    </div>
-				</div>
-	</div>
-</div>
 						</div>
 					</li>
             </ul>    
@@ -221,47 +181,7 @@
 	            </div>
 			</div>
 		</div>
-		<div class="col-sm-12 col-md-4">
-			<div class="card">
-				<div class="card-header">
-					<h6 class="card-title">Scenarios</h6>
-				</div>
-				<div class="card-body">
-	                <div class="">
-	                    <canvas id='child-analysis' width='115' height='90'></canvas>
-	                </div>
-	            </div>
-	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>1</b> scenarios passed</small></div>
-	                <div>
-	                    <small data-tooltip='0%'><b>0</b> scenarios failed, 
-	                    <b data-tooltip='0%'>0</b> others
-	                    </small>
-                    </div>
-	            </div>
 			</div>
-		</div>
-				<div class="col-sm-12 col-md-4">
-			<div class="card">
-				<div class="card-header">
-					<h6 class="card-title">Steps</h6>
-				</div>
-				<div class="card-body">
-	                <div class="">
-	                    <canvas id='grandchild-analysis' width='115' height='90'></canvas>
-	                </div>
-	            </div>
-	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>4</b> steps passed</small></div>
-	                <div>
-	                    <small data-tooltip='0%'><b>0</b> steps failed, 
-	                    <b data-tooltip='0%'>0</b> others
-	                    </small>
-                    </div>
-	            </div>
-			</div>
-		</div>
-	</div>
 	<div class="row">
 		<div class="col-md-3">
 			<div class="card">
@@ -287,27 +207,8 @@
 				<div class="card-body box-height-150">
 	                <div class="media justify-content-between">
 						<div>
-							<h6 class="card-title">Scenarios</h6>
-							<h2 class="font-size-28 font-weight-light">1</h2>
-							<span class="text-semibold text-success font-size-15">
-							<i class="ti-arrow-up font-size-11"></i> 
-								<span>100%</span>
-							</span>
-						</div>
-						<div class="align-self-end">
-							<i class="fa fa-align-left font-size-70 opacity-01"></i>
-						</div>
-					</div>
-	            </div>
-			</div>
-		</div>
-		<div class="col-md-3">
-			<div class="card">
-				<div class="card-body box-height-150">
-	                <div class="media justify-content-between">
-						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">19/03/2021 14:52:02</h6>
+							<h6 class="font-weight-light">19/03/2021 15:06:12</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -323,8 +224,24 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:12.8328815</h6>
+							<h6 class="font-weight-light">00:00:00.1653207</h6>
 							<span class="text-semibold text-danger font-size-15">
+						</div>
+						<div class="align-self-end">
+							<i class="fa fa-clock-o font-size-70 text-danger opacity-01"></i>
+						</div>
+					</div>
+	            </div>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<div class="card">
+				<div class="card-body box-height-150">
+	                <div class="media justify-content-between">
+						<div>
+							<p class="">Duration</p>
+							<h6 class="font-weight-light">00:00:04.5260557</h6>
+							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
 							<i class="fa fa-clock-o font-size-70 text-danger opacity-01"></i>
@@ -347,8 +264,8 @@
 		warningParent: 0,
 		skipParent: 0,
 		exceptionsParent: 0,
-		childCount: 1,
-		passChild: 1,
+		childCount: 0,
+		passChild: 0,
 		failChild: 0,
 		fatalChild: 0,
 		errorChild: 0,
@@ -357,8 +274,8 @@
 		infoChild: 0,
 		debugChild: 0,
 		exceptionsChild: 0,
-		grandChildCount: 4,
-		passGrandChild: 4,
+		grandChildCount: 0,
+		passGrandChild: 0,
 		failGrandChild: 0,
 		fatalGrandChild: 0,
 		errorGrandChild: 0,
